push latest changes

--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <nav>
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="#features">Features</a>
             <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <a href="#terms">Terms & Conditions</a>
-            <a href="#privacy">Privacy Policy</a>
-            <a href="#faq">FAQ</a>
+            <a href="contact.html">Contact</a>
+            <a href="terms.html">Terms & Conditions</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="faq.html">FAQ</a>
         </nav>
     </div>
 
@@ -378,9 +378,9 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="#terms">Terms & Conditions</a>
-        <a href="#privacy">Privacy Policy</a>
-        <a href="#faq">FAQ</a>
+        <a href="terms.html">Terms & Conditions</a>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="faq.html">FAQ</a>
     </footer>
 
     <script>
