--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="logo"></a>
+        <a href="index.html" class="logo">StepGuard</a>
          <button class="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
