Fix responsive styles

--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>StepGuard uses your device's built-in accelerometer and gyroscope sensors to count steps. It can also integrate with popular fitness trackers like Fitbit, Apple Watch, and Google Fit for more accurate tracking.</p>
+                    <p>StepGuard uses your device's built-in accelerometer and gyroscope sensors to count steps. It can also integrate with your Apple Watch for more accurate tracking.</p>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>If you don't meet your daily step goal, certain device functions may be restricted based on your settings. This could include limiting app usage time, blocking entertainment apps, or reducing screen brightness. The restrictions are designed to encourage physical activity.</p>
+                    <p>If you don't meet your daily step goal, certain device functions may be restricted based on your settings. This could include limiting app usage time, blocking entertainment apps or websites. The restrictions are designed to encourage physical activity.</p>
                 </div>
             </div>
 
