--- a/privacy.html
+++ b/privacy.html
@@ -30,12 +30,12 @@
     <div class="container">
         <div class="content">
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: July 18, 2025</p>
+            <p class="last-updated">Last updated: July 21, 2025</p>
 
             <h2>1. Information We Collect</h2>
             <p>We collect the following types of information to provide and improve our services:</p>
             <ul>
-                <li><strong>Step Count Data:</strong> Daily step counts from your device's built-in sensors or connected fitness trackers</li>
+                <li><strong>Step Count Data:</strong> Daily step counts from your device's built-in sensors or Apple Watch</li>
                 <li><strong>Device Usage Information:</strong> App usage patterns, screen time, and restriction compliance</li>
                 <li><strong>Account Information:</strong> Email address, username, and profile settings</li>
                 <li><strong>Technical Data:</strong> Device type, operating system, app version, and crash reports</li>
