Update terms, faqs

--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>StepGuard uses your device's built-in accelerometer and gyroscope sensors to count steps. It can also integrate with your Apple Watch for more accurate tracking.</p>
+                    <p>StepGuard accesses your step count data through your device's built-in health systems (Apple Health on iOS) and can also integrate with Apple Watch. The app requests permission to read your step data in real-time but never stores or copies this information. Each time the app needs to check your progress, it requests your current step count directly from your device's health database. All step counting relies on your device's accelerometer, gyroscope, and other motion sensors, with StepGuard simply reading the results that your device has already calculated and stored in its secure health systems.</p>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>If you don't meet your daily step goal, certain device functions may be restricted based on your settings. This could include limiting app usage time, blocking entertainment apps or websites. The restrictions are designed to encourage physical activity.</p>
+                    <p>When you haven't reached your daily step goal, StepGuard will activate the restrictions you've configured for specific apps and websites. These restrictions are implemented through your device's built-in screen time and content filtering systems, so they're enforced at the system level for reliability. You can customize which apps get restricted (like social media, games, or entertainment apps), set time limits, or completely block access until your goal is met. The app checks your step progress in real-time, so restrictions are automatically lifted as soon as you reach your target. You maintain full control over emergency access.</p>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Yes! StepGuard allows you to set personalized daily step goals and customize which restrictions apply when goals aren't met. You can also set different goals for different days of the week and adjust the severity of restrictions.</p>
+                    <p>Absolutely! StepGuard offers extensive customization options, all stored locally on your device. You can set different daily step goals for any installed apps and websites, create custom restriction profiles for different apps and websites, and adjust the severity of limitations. For example, you might restrict a social media app completely until you hit 5,000 steps, limit a gaming app to 30 minutes until 8,000 steps. You can also set up graduated restrictions where more apps become available as you reach milestone step counts throughout the day. All these preferences are saved in your device's local storage and never transmitted to external servers.</p>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>StepGuard includes accessibility features and can be configured for users with varying mobility levels. You can set alternative activity goals, adjust step targets, or use manual override features. Please consult with your healthcare provider about appropriate activity levels.</p>
+                    <p>StepGuard is designed to be inclusive and accommodating for users with varying physical abilities. You can set lower step goals that are appropriate for your situation, create custom activity targets based on your healthcare provider's recommendations. The app includes manual override options to ensure you're never locked out of essential functions. We strongly recommend consulting with your healthcare provider to determine appropriate activity levels and goals.</p>
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Absolutely. Your step count data is encrypted and stored securely. Most processing happens locally on your device, and we never share your personal health data with third parties without your explicit consent. See our Privacy Policy for complete details.</p>
+                    <p>Your privacy is our top priority. StepGuard does not collect, store, or transmit any of your personal data, including step counts, health information, or usage patterns. All data processing happens entirely on your device using your device's own processing power and secure storage. When the app checks your step count, it reads this information directly from your device's health systems (like Apple Health) in real-time, but never makes copies or stores this data permanently. Since we don't collect your information, there's nothing for hackers to steal from our servers, and there are no external accounts or cloud services that could be compromised. You can verify our privacy practices by checking your device's privacy settings to see that StepGuard makes no network connections for data transmission.</p>
                 </div>
             </div>
 
@@ -87,17 +87,17 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Yes, StepGuard includes an emergency override feature that allows you to temporarily disable all restrictions. This ensures you can always access your device for important calls, messages, or emergency situations.</p>
+                    <p>Yes, StepGuard provides a manual override option where users can switch off all restrictions immediately hence allowing the users to access critical functions like emergency calling, maps during late hours, or important messaging apps during emergencies.</p>
                 </div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question" onclick="toggleFAQ(this)">
                     <h3>Does StepGuard work with all fitness trackers?</h3>
-                   <span class="faq-toggle">⌄</span>
+                    <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>StepGuard integrates with most popular fitness trackers including Apple Watch, Fitbit, Samsung Galaxy Watch, and Google Fit. It also works with your smartphone's built-in sensors if you don't have a separate fitness tracker.</p>
+                    <p>StepGuard works with any fitness tracker or device that syncs with your phone's health system. On iOS, this means any device that connects to Apple Health (including Apple Watch, Fitbit, Garmin, and many others). The app doesn't connect directly to fitness trackers but instead reads the aggregated step data that your phone's health system has already collected from all your connected devices. This approach ensures compatibility with the widest range of devices while maintaining our privacy-first design. If you don't have a fitness tracker, the app works perfectly with just your smartphone's built-in motion sensors.</p>
                 </div>
             </div>
 
@@ -107,19 +107,79 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Step counting accuracy depends on your device's sensors and how you carry your phone. Modern smartphones are generally accurate within 5-10% for step counting. For better accuracy, we recommend using a dedicated fitness tracker or wearing your phone consistently.</p>
+                    <p>Step counting accuracy depends entirely on your device's sensors and health systems, as StepGuard simply reads the step count that your phone or fitness tracker has already calculated. Modern smartphones typically achieve 90-95% accuracy when carried consistently, while dedicated fitness trackers like Apple Watch or Fitbit often provide even better accuracy. Factors that can affect accuracy include how you carry your device, the type of physical activity, and your walking style. For best results, we recommend carrying your phone in a pocket or bag close to your body, or using a dedicated fitness tracker worn on your wrist. Since StepGuard reads from your device's health system, you'll get the same accuracy as any other health or fitness app on your device.</p>
                 </div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question" onclick="toggleFAQ(this)">
-                    <h3>Can I share my progress with friends or family?</h3>
+                    <h3>What permissions does StepGuard need and why?</h3>
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Yes! StepGuard includes optional social features that let you share your progress, compete with friends, or join family challenges. All sharing is opt-in and you control what information you share.</p>
+                    <p>StepGuard requires several permissions to function effectively: Health Data Access (to read your step count from Apple Health), Screen Time/App Usage (to monitor and control app restrictions), and Content & Privacy Restrictions (to manage website blocking). These permissions are essential because the app needs to check your step progress in real-time and enforce restrictions through your device's built-in systems. Unlike many apps, StepGuard uses these permissions only for local processing and never transmits the accessed data to external servers. You can review and revoke any of these permissions through your device's settings, though this may limit the app's functionality. All permissions are requested transparently with clear explanations of why each one is needed.</p>
                 </div>
             </div>
+
+            <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>Will StepGuard drain my battery?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>StepGuard is designed to minimize battery impact through efficient local processing and smart monitoring techniques. The app doesn't constantly run in the background but instead uses your device's built-in systems to check step counts and manage restrictions. Since all processing happens locally without network connections for data transmission, there's no battery drain from constant internet communication. The app leverages your device's existing health monitoring systems rather than running its own step counting algorithms. Most users report minimal to no noticeable battery impact. You can monitor the app's battery usage through your device's battery settings and optimize performance by adjusting how frequently the app checks for step count updates.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>Can I use StepGuard on multiple devices?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>Since StepGuard operates entirely locally on each device without cloud synchronization or user accounts, each installation works independently. You can install the app on multiple devices (like your phone and tablet), but you'll need to configure settings separately on each device. This approach actually enhances privacy since there's no central account linking your devices or usage patterns. If you want consistent step goals across devices, you'll need to manually set them up the same way on each installation. The advantage of this local-only approach is that if one device is lost or compromised, your data on other devices remains completely secure and unaffected.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>What happens to my data if I uninstall the app?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>When you uninstall StepGuard, all app-related data is completely removed from your device, including your preferences, restriction settings, and any locally stored configuration data. Since we don't collect or store any of your information on external servers, uninstalling the app means there's no trace of your usage left anywhere. Your step count data remains in your device's health system (Apple Health) where it was originally stored, but StepGuard's access to this data is permanently revoked. Any screen time or app restrictions that were active will be automatically disabled when the app is removed. This complete data removal is possible because of our privacy-first design that keeps everything local to your device.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>How do I reset my daily goals and progress?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>StepGuard automatically resets your daily progress at midnight according to your device's time zone, giving you a fresh start each day. You can manually reset your current day's progress through the app's settings if needed, though this should be used sparingly to maintain the effectiveness of your digital wellness routine. You can also adjust your daily step goals at any time through the app's goal-setting interface. Changes to goals and manual resets are processed instantly since all data is stored locally on your device. The app also includes weekly and monthly progress tracking to help you see longer-term patterns, though this historical data is also stored only on your device and never transmitted elsewhere.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>Is StepGuard suitable for children and teens?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>StepGuard can be an excellent tool for helping children and teens develop healthy digital habits, especially since it doesn't collect any personal data that could raise privacy concerns. Parents can set up the app on their child's device with appropriate step goals and restrictions, and the local-only operation means there's no risk of data being collected about minors. The app works well with existing parental controls and screen time limits. However, we recommend parental supervision during setup to ensure the restrictions are properly configured and step goals are age-appropriate. Parents should also ensure that children understand how to override all restrictions in case of an emergency and that certain essential apps (like communication with parents) are never restricted.</p>
+                </div>
+            </div>
+
+            <!-- <div class="faq-item">
+                <div class="faq-question" onclick="toggleFAQ(this)">
+                    <h3>Can I bypass or disable the restrictions?</h3>
+                    <span class="faq-toggle">⌄</span>
+                </div>
+                <div class="faq-answer">
+                    <p>StepGuard includes legitimate override options for emergencies and special circumstances, but it's designed to prevent easy circumvention that would undermine your digital wellness goals. The app integrates deeply with your device's system-level restriction features, making casual bypassing difficult. However, you always maintain ultimate control over your device - you can disable the app, revoke its permissions, or uninstall it entirely if needed. The app includes temporary override codes for emergencies, scheduled bypass periods for important events, and grace periods for genuine technical issues. The goal is to create helpful friction that encourages physical activity while never completely locking you out of your device when you truly need access.</p>
+                </div>
+            </div> -->
 
             <div class="faq-item">
                 <div class="faq-question" onclick="toggleFAQ(this)">
@@ -127,7 +187,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>You can reach our support team through the Contact page on our website, by emailing support@stepguard.com, or through the in-app help center. We typically respond to support requests within 24 hours.</p>
+                    <p>We provide comprehensive support through multiple channels: email support@stepguard.com for general questions and technical issues and our Contact page for detailed inquiries. Since StepGuard operates locally on your device, many issues can be resolved through device-specific troubleshooting steps that we provide. We typically respond to support requests within 24-48 hours during business days. We can help with permission configuration, restriction setup, compatibility issues, and any questions about the app's privacy-first operation.</p>
                 </div>
             </div>
         </div>
