--- a/privacy.html
+++ b/privacy.html
@@ -30,60 +30,97 @@
     <div class="container">
         <div class="content">
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: July 21, 2025</p>
+            <p class="last-updated">Last updated: July 22, 2025</p>
 
-            <h2>1. Information We Collect</h2>
-            <p>We collect the following types of information to provide and improve our services:</p>
+            <h2>1. Our Privacy-First Approach</h2>
+            <p>StepGuard is committed to protecting your privacy. We do not collect, store, or transmit any of your personal information to our servers or any third-party services. All data processing occurs locally on your device to ensure maximum privacy and security.</p>
+
+            <h2>2. Data Access We Request</h2>
+            <p>To provide our step-based app and website restriction services, StepGuard requires access to specific data on your device. This access is essential for the app to function properly:</p>
             <ul>
-                <li><strong>Step Count Data:</strong> Daily step counts from your device's built-in sensors or Apple Watch</li>
-                <li><strong>Device Usage Information:</strong> App usage patterns, screen time, and restriction compliance</li>
-                <li><strong>Account Information:</strong> Email address, username, and profile settings</li>
-                <li><strong>Technical Data:</strong> Device type, operating system, app version, and crash reports</li>
+                <li><strong>Step Count Data Access:</strong> We request permission to read your daily step counts from your device's built-in health sensors, Apple Watch, or connected fitness trackers. This data is processed entirely on your device to determine when restrictions should be lifted or applied. Your step count information never leaves your device.</li>
+                <li><strong>App Usage Monitoring:</strong> We require permission to monitor which apps you use and for how long. This allows us to enforce restrictions on specific applications based on your step count goals. All monitoring and restriction logic operates locally on your device without any external data transmission.</li>
+                <li><strong>Screen Time and Device Controls:</strong> We request access to your device's screen time controls and app restriction features. This enables us to automatically block or unblock apps and websites based on whether you've met your daily step targets. These controls are managed entirely through your device's built-in systems.</li>
+                <li><strong>Network Access for Website Restrictions:</strong> We may request permission to monitor network activity to implement website restrictions through your device's content filtering capabilities. This monitoring occurs locally and no browsing data is collected or stored.</li>
             </ul>
 
-            <h2>2. How We Use Your Information</h2>
-            <p>We use your information to:</p>
+            <h2>3. How We Use the Data Access</h2>
+            <p>The data access permissions we request are used exclusively for:</p>
             <ul>
-                <li>Provide step-based device restriction services</li>
-                <li>Track your progress toward fitness goals</li>
-                <li>Generate personalized insights and recommendations</li>
-                <li>Improve app functionality and user experience</li>
-                <li>Send important updates and notifications</li>
+                <li><strong>Implementing Step-Based Restrictions:</strong> Reading your step count to automatically determine when to enable or disable app and website restrictions according to your personal goals.</li>
+                <li><strong>Providing Real-Time Feedback:</strong> Displaying your current step progress and restriction status within the app interface, with all calculations performed locally on your device.</li>
+                <li><strong>Customizing Restriction Rules:</strong> Allowing you to set personalized step goals and choose which apps or websites should be restricted, with all preferences stored locally in your device's secure storage.</li>
+                <li><strong>Maintaining Restriction Integrity:</strong> Ensuring that restrictions cannot be easily bypassed while still allowing access once step goals are achieved.</li>
             </ul>
 
-            <h2>3. Data Storage and Security</h2>
-            <p>Your data is stored securely using industry-standard encryption. Step count data is processed locally on your device when possible, with only aggregated data sent to our servers for analytics purposes.</p>
-
-            <h2>4. Data Sharing</h2>
-            <p>We do not sell, trade, or share your personal information with third parties, except:</p>
+            <h2>4. Data Storage and Security</h2>
+            <p>All your data remains exclusively on your device:</p>
             <ul>
-                <li>With your explicit consent</li>
-                <li>To comply with legal requirements</li>
-                <li>To protect our rights and safety</li>
-                <li>With service providers who assist in app functionality (under strict confidentiality agreements)</li>
+                <li><strong>Local Storage Only:</strong> Your step data, app usage patterns, restriction preferences, and all other information are stored solely in your device's secure local storage. We do not maintain any servers or databases that store your personal information.</li>
+                <li><strong>No Cloud Synchronization:</strong> StepGuard does not sync your data to the cloud or across multiple devices. Each installation operates independently with its own local data.</li>
+                <li><strong>Device Security:</strong> Your data is protected by your device's built-in security features, including encryption and access controls managed by your operating system.</li>
+                <li><strong>No Analytics Collection:</strong> We do not collect any usage analytics, crash reports, or performance data that could identify you or your usage patterns.</li>
             </ul>
 
-            <h2>5. Health Data</h2>
-            <p>Step count and activity data is considered health information. We handle this data with extra care and in compliance with applicable health data protection regulations.</p>
-
-            <h2>6. Your Rights</h2>
-            <p>You have the right to:</p>
+            <h2>5. Data Sharing and Third Parties</h2>
+            <p>Since we do not collect or store any of your data, there is nothing to share:</p>
             <ul>
-                <li>Access your personal data</li>
-                <li>Correct inaccurate information</li>
-                <li>Delete your account and associated data</li>
-                <li>Export your data in a portable format</li>
-                <li>Opt out of data collection (though this may limit app functionality)</li>
+                <li><strong>No Data Collection:</strong> We cannot share, sell, or provide your data to third parties because we never collect it in the first place.</li>
+                <li><strong>No External Connections:</strong> The app operates independently without connecting to external services for data processing or storage.</li>
+                <li><strong>No Advertising Networks:</strong> We do not integrate with advertising networks or analytics services that might collect your information.</li>
+                <li><strong>Legal Requests:</strong> Since we do not possess your data, we cannot comply with requests for user information from law enforcement or legal entities.</li>
             </ul>
 
-            <h2>7. Children's Privacy</h2>
-            <p>Our app is not intended for children under 13. We do not knowingly collect personal information from children under 13. If you believe we have collected such information, please contact us immediately.</p>
+            <h2>6. Health Data Protection</h2>
+            <p>Your health and fitness data receives special protection:</p>
+            <ul>
+                <li><strong>Health App Integration:</strong> When accessing step data through Apple Health, we comply with their strict privacy and security requirements. Your health data never leaves the secure health data ecosystem on your device.</li>
+                <li><strong>No Health Data Storage:</strong> We do not store copies of your health data. Each time the app needs to check your step count, it requests this information directly from your device's health systems in real-time.</li>
+                <li><strong>HIPAA Considerations:</strong> While StepGuard is not a covered entity under HIPAA, we follow privacy-by-design principles that exceed typical health data protection standards.</li>
+            </ul>
 
-            <h2>8. Changes to Privacy Policy</h2>
-            <p>We may update this Privacy Policy periodically. We will notify you of significant changes through the app or by email.</p>
+            <h2>7. Your Control and Rights</h2>
+            <p>You maintain complete control over your data:</p>
+            <ul>
+                <li><strong>Permission Management:</strong> You can revoke any of the permissions granted to StepGuard at any time through your device's settings, though this may limit app functionality.</li>
+                <li><strong>Data Deletion:</strong> Since all data is stored locally, uninstalling the app completely removes all associated data from your device. There are no external accounts or profiles to delete.</li>
+                <li><strong>No Account Required:</strong> StepGuard operates without requiring you to create an account, provide an email address, or share any identifying information.</li>
+                <li><strong>Transparency:</strong> You can verify our privacy claims by reviewing the app's behavior through your device's privacy and security settings.</li>
+            </ul>
 
-            <h2>9. Contact Us</h2>
-            <p>If you have questions about this Privacy Policy or your data, please contact us at privacy@stepguard.com or through our Contact page.</p>
+            <h2>8. Children's Privacy</h2>
+            <p>StepGuard's privacy-first design makes it suitable for users of all ages:</p>
+            <ul>
+                <li><strong>No Data Collection:</strong> Since we do not collect any personal information, there are no special concerns regarding children's data privacy.</li>
+                <li><strong>Parental Controls:</strong> Parents can monitor and control the app's permissions through standard device parental control features.</li>
+                <li><strong>Educational Use:</strong> The app can help children develop healthy digital habits without compromising their privacy.</li>
+            </ul>
+
+            <h2>9. App Updates and Privacy</h2>
+            <p>Our commitment to privacy extends to future updates:</p>
+            <ul>
+                <li><strong>Privacy-First Development:</strong> Any future features will be designed with the same privacy-first principles, ensuring no data collection or external transmission.</li>
+                <li><strong>Policy Updates:</strong> If we ever change our approach to data handling, we will update this policy and clearly communicate any changes through app store update notes.</li>
+                <li><strong>User Consent:</strong> Any new data access requirements will require explicit user permission through your device's standard permission systems.</li>
+            </ul>
+
+            <h2>10. Technical Implementation</h2>
+            <p>Our privacy protection is built into the app's technical architecture:</p>
+            <ul>
+                <li><strong>No Network Requirements:</strong> Core functionality works entirely offline, with no need for internet connectivity after initial installation.</li>
+                <li><strong>Local Processing:</strong> All algorithms for step counting, goal tracking, and restriction management run locally on your device's processor.</li>
+                <li><strong>Secure APIs:</strong> We use only official, secure system APIs provided by iOS for accessing health and usage data, ensuring compliance with platform security standards.</li>
+            </ul>
+
+            <h2>11. Contact Us</h2>
+            <p>If you have questions about this Privacy Policy or how StepGuard handles data access:</p>
+            <ul>
+                <li><strong>Email:</strong> support@stepguard.com</li>
+                <li><strong>Contact Form:</strong> Available through our Contact page</li>
+                <li><strong>Transparency:</strong> We're happy to provide technical details about our privacy implementation upon request</li>
+            </ul>
+
+            <p><em>This privacy policy reflects our current app version that operates with zero data collection. We believe privacy is a fundamental right and have designed StepGuard to provide powerful functionality while keeping all your personal information under your complete control.</em></p>
         </div>
     </div>
 </body>
