--- a/faq.html
+++ b/faq.html
@@ -187,7 +187,7 @@
                     <span class="faq-toggle">⌄</span>
                 </div>
                 <div class="faq-answer">
-                    <p>We provide comprehensive support through multiple channels: email support@stepguard.com for general questions and technical issues and our Contact page for detailed inquiries. Since StepGuard operates locally on your device, many issues can be resolved through device-specific troubleshooting steps that we provide. We typically respond to support requests within 24-48 hours during business days. We can help with permission configuration, restriction setup, compatibility issues, and any questions about the app's privacy-first operation.</p>
+                    <p>We provide comprehensive support through multiple channels: email support@stepguard.fit for general questions and technical issues and our Contact page for detailed inquiries. Since StepGuard operates locally on your device, many issues can be resolved through device-specific troubleshooting steps that we provide. We typically respond to support requests within 24-48 hours during business days. We can help with permission configuration, restriction setup, compatibility issues, and any questions about the app's privacy-first operation.</p>
                 </div>
             </div>
         </div>
