--- a/privacy.html
+++ b/privacy.html
@@ -115,7 +115,7 @@
             <h2>11. Contact Us</h2>
             <p>If you have questions about this Privacy Policy or how StepGuard handles data access:</p>
             <ul>
-                <li><strong>Email:</strong> support@stepguard.com</li>
+                <li><strong>Email:</strong>support@stepguard.fit</li>
                 <li><strong>Contact Form:</strong> Available through our Contact page</li>
                 <li><strong>Transparency:</strong> We're happy to provide technical details about our privacy implementation upon request</li>
             </ul>
