--- a/terms.html
+++ b/terms.html
@@ -162,7 +162,7 @@
             <h2>15. Contact Information and Support</h2>
             <p>For questions, support, or concerns regarding these Terms or the App:</p>
             <ul>
-                <li><strong>Primary Contact:</strong> Email us at support@stepguard.com for general questions, technical support, or Terms & Privacy-related inquiries.</li>
+                <li><strong>Primary Contact:</strong> Email us at support@stepguard.fit for general questions, technical support, or Terms & Privacy-related inquiries.</li>
                 <li><strong>Contact Form:</strong> Alternative contact methods are available through our Contact page on the StepGuard website.</li>
                 <li><strong>Response Time:</strong> We strive to respond to all inquiries within 48-72 hours during business days, though complex issues may require additional time.</li>
             </ul>
