--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <p>Get detailed insights into your activity patterns and device usage correlation</p>
                     </div>
                 </div>
-                <a href="https://apps.apple.com/app/idYOUR_APP_ID" target="_blank" rel="noopener">
+                <a href="https://apps.apple.com/app/stepguard-steps-to-unlock-apps/id6745701169" target="_blank" rel="noopener">
                 <img src="assets/download.svg" alt="Download on the App Store" style="height: 80px;" />
                 </a>
             </div>
@@ -58,7 +58,7 @@
         <!-- Right Side Image -->
         <div class="right-image">
             <video id="demoVideo" autoplay muted loop playsinline>
-            <source src="/assets/demovideo720.mov" type="video/mp4" />
+            <source src="/assets/newdemo.mov" type="video/mp4" />
             Your browser does not support the video tag.
             </video>
         </div>
