--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <a href="#" class="logo">StepGuard</a>
+        <img src="./assets/logo.png" style="height: 40px; width: 40px;" />
         <button class="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
