Add google analytics

--- a/privacy.html
+++ b/privacy.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - StepGuard</title>
+    <title>Privacy Policy - Step Guard</title>
    <link rel="stylesheet" href="privacy-styles.css" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DR9H1HS1SC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DR9H1HS1SC');
+</script>
 <body>
     <header class="header">
         <img src="./assets/logo.png" style="height: 40px; width: 40px;" />
